--- a/src/test/resources/config/application.properties
+++ b/src/test/resources/config/application.properties
@@ -1,5 +1,5 @@
 #portal information
-portal.url=http://10.13.1.92
+portal.url=http://www.google.com
 portal.port=80
 portal.username=test@user.com
 portal.password=Abc123456
